tests/neg/i14432a.check
-- Error: tests/neg/i14432a.scala:14:43 --------------------------------------------------------------------------------
14 |  val mFoo = summon[Mirror.Of[example.Foo]] // error: no mirror found
   |                                           ^
   |No given instance of type deriving.Mirror.Of[example.Foo] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[example.Foo]: 
   |	* class Foo is not a generic sum because it is not a sealed class
   |	* class Foo is not a generic product because constructor of class Foo is unnaccessible from the calling scope.
